# psychopy-chronos

./: .gitignore  LICENSE  README.md  pyproject.toml  test_chronos_timing.py
chronos/: __init__.py  chronos.py  chronos_constants.py  chronos_keyboard.py
chronos_driver_win/: Chronos.cat  chronos.inf
docs/: PROTOCOL.md
examples/: chronos_aux_rt_demo.psyexp  chronos_builder_demo.psyexp  test_chronos_timing.py  test_leds.py
